--- a/inSooqApp/inSooqApp/Base.lproj/Forms.storyboard
+++ b/inSooqApp/inSooqApp/Base.lproj/Forms.storyboard
@@ -399,6 +399,21 @@
             </objects>
             <point key="canvasLocation" x="2154" y="733"/>
         </scene>
+        <!--BusinessVC-->
+        <scene sceneID="zRz-rY-t6J">
+            <objects>
+                <viewController storyboardIdentifier="Business_VC" id="B6g-Ln-JcW" customClass="Business_VC" customModule="inSooqApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="yfZ-u8-3bZ">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="G6s-H8-xlV"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="otX-iB-6hW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1448" y="733"/>
+        </scene>
     </scenes>
     <resources>
         <systemColor name="systemBackgroundColor">
