--- a/inSooqApp/Controllers/Forms/Elements/LocationView/FormLocationView.xib
+++ b/inSooqApp/Controllers/Forms/Elements/LocationView/FormLocationView.xib
@@ -6,6 +6,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -33,12 +34,22 @@
                             <state key="normal" title="Button"/>
                             <buttonConfiguration key="configuration" style="plain" title="LOCATION"/>
                         </button>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="location.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="i3w-cW-qrR">
+                            <rect key="frame" x="388" y="38.5" width="18" height="16.5"/>
+                            <color key="tintColor" systemColor="systemGrayColor"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="18" id="T2x-DS-G3f"/>
+                                <constraint firstAttribute="height" constant="18" id="UsK-bg-DVK"/>
+                            </constraints>
+                        </imageView>
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstItem="8fz-AJ-7go" firstAttribute="top" secondItem="Ixq-bu-JOc" secondAttribute="top" id="1ev-v8-1Vh"/>
                         <constraint firstItem="8fz-AJ-7go" firstAttribute="leading" secondItem="Ixq-bu-JOc" secondAttribute="leading" id="25B-xb-3kZ"/>
+                        <constraint firstItem="i3w-cW-qrR" firstAttribute="centerY" secondItem="MJo-Il-2LL" secondAttribute="centerY" id="Y0u-ZY-Iqc"/>
                         <constraint firstAttribute="bottom" secondItem="MJo-Il-2LL" secondAttribute="bottom" id="jEe-jv-4fl"/>
+                        <constraint firstAttribute="trailing" secondItem="i3w-cW-qrR" secondAttribute="trailing" id="qkD-aR-v1l"/>
                         <constraint firstItem="MJo-Il-2LL" firstAttribute="leading" secondItem="8fz-AJ-7go" secondAttribute="leading" id="qm8-oZ-KcU"/>
                         <constraint firstItem="MJo-Il-2LL" firstAttribute="top" secondItem="8fz-AJ-7go" secondAttribute="bottom" id="uI2-SK-7ko"/>
                     </constraints>
@@ -62,8 +73,12 @@
         </view>
     </objects>
     <resources>
+        <image name="location.fill" catalog="system" width="128" height="121"/>
         <namedColor name="labelOrange">
             <color red="1" green="0.54100000858306885" blue="0.016000000759959221" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <systemColor name="systemGrayColor">
+            <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
     </resources>
 </document>
