--- a/inSooqApp/Controllers/Forms/Elements/PreviewView/FormPreviewView.xib
+++ b/inSooqApp/Controllers/Forms/Elements/PreviewView/FormPreviewView.xib
@@ -16,14 +16,13 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ixq-bu-JOc" customClass="FormPreviewView" customModule="inSooqApp" customModuleProvider="target">
-                    <rect key="frame" x="0.0" y="4" width="414" height="142"/>
+                    <rect key="frame" x="4" y="4" width="406" height="142"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XFH-wW-PCc">
-                            <rect key="frame" x="4" y="7" width="128" height="128"/>
-                            <color key="backgroundColor" systemColor="systemGray2Color"/>
+                            <rect key="frame" x="4" y="4" width="134" height="134"/>
+                            <color key="backgroundColor" systemColor="systemGray4Color"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="128" id="TWY-NV-p8x"/>
-                                <constraint firstAttribute="width" constant="128" id="kRU-sV-fbV"/>
+                                <constraint firstAttribute="width" secondItem="XFH-wW-PCc" secondAttribute="height" multiplier="1:1" id="7c9-vt-b6O"/>
                             </constraints>
                             <userDefinedRuntimeAttributes>
                                 <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -32,30 +31,30 @@
                             </userDefinedRuntimeAttributes>
                         </imageView>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="bjP-Gi-TEW">
-                            <rect key="frame" x="136" y="4" width="278" height="134"/>
+                            <rect key="frame" x="142" y="4" width="264" height="134"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jtV-MK-Rwe">
-                                    <rect key="frame" x="0.0" y="0.0" width="278" height="44.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="264" height="44.5"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                    <nil key="textColor"/>
+                                    <color key="textColor" systemColor="systemGrayColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kxB-oF-ww2">
-                                    <rect key="frame" x="0.0" y="44.5" width="278" height="45"/>
+                                    <rect key="frame" x="0.0" y="44.5" width="264" height="45"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                    <nil key="textColor"/>
+                                    <color key="textColor" systemColor="systemGrayColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AVp-yk-IZv">
-                                    <rect key="frame" x="0.0" y="89.5" width="278" height="44.5"/>
+                                    <rect key="frame" x="0.0" y="89.5" width="264" height="44.5"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                    <nil key="textColor"/>
+                                    <color key="textColor" systemColor="systemGrayColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qJi-y1-qz9">
-                                    <rect key="frame" x="0.0" y="134" width="278" height="0.0"/>
+                                    <rect key="frame" x="0.0" y="134" width="264" height="0.0"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                    <nil key="textColor"/>
+                                    <color key="textColor" systemColor="systemGrayColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                             </subviews>
@@ -63,21 +62,29 @@
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
+                        <constraint firstItem="XFH-wW-PCc" firstAttribute="top" secondItem="Ixq-bu-JOc" secondAttribute="top" constant="4" id="0Lj-rN-xVz"/>
                         <constraint firstAttribute="height" constant="142" id="7Cj-81-kff"/>
                         <constraint firstItem="XFH-wW-PCc" firstAttribute="leading" secondItem="Ixq-bu-JOc" secondAttribute="leading" constant="4" id="ACV-G7-Q78"/>
                         <constraint firstItem="XFH-wW-PCc" firstAttribute="centerY" secondItem="Ixq-bu-JOc" secondAttribute="centerY" id="Tvh-PQ-e4m"/>
                         <constraint firstAttribute="trailing" secondItem="bjP-Gi-TEW" secondAttribute="trailing" id="VNx-1a-5uR"/>
                         <constraint firstItem="bjP-Gi-TEW" firstAttribute="leading" secondItem="XFH-wW-PCc" secondAttribute="trailing" constant="4" id="YUS-z6-xRk"/>
                         <constraint firstAttribute="bottom" secondItem="bjP-Gi-TEW" secondAttribute="bottom" constant="4" id="fOc-6r-cba"/>
+                        <constraint firstAttribute="bottom" secondItem="XFH-wW-PCc" secondAttribute="bottom" constant="4" id="fyY-EY-0WA"/>
                         <constraint firstItem="bjP-Gi-TEW" firstAttribute="top" secondItem="Ixq-bu-JOc" secondAttribute="top" constant="4" id="uai-PT-p0E"/>
                     </constraints>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                            <integer key="value" value="4"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.clipsToBounds" value="YES"/>
+                    </userDefinedRuntimeAttributes>
                 </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Ixq-bu-JOc" secondAttribute="trailing" id="MN1-rT-162"/>
-                <constraint firstItem="Ixq-bu-JOc" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="gZh-SC-x93"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Ixq-bu-JOc" secondAttribute="trailing" constant="4" id="MN1-rT-162"/>
+                <constraint firstItem="Ixq-bu-JOc" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="4" id="gZh-SC-x93"/>
                 <constraint firstItem="Ixq-bu-JOc" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="4" id="jyq-KY-clB"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="Ixq-bu-JOc" secondAttribute="bottom" constant="4" id="lpa-Df-faz"/>
             </constraints>
@@ -92,8 +99,11 @@
         </view>
     </objects>
     <resources>
-        <systemColor name="systemGray2Color">
-            <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <systemColor name="systemGray4Color">
+            <color red="0.81960784313725488" green="0.81960784313725488" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGrayColor">
+            <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
